wdl-analysis/tests/validation/hints/source.errors
error: task `foo` does not have an input named `a`
   ┌─ tests/validation/hints/source.wdl:11:13
   │
11 │             a: hints {
   │             ^

